# birdnet2sqlite

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  birdnet2sqlite.py  birdnet2sqlite.sh  preprocess_birdnet_result.py  pyproject.toml  run.sh
birdnet2sqlite/: birdnet2sqlite.py  preprocess_birdnet_result.py  utils.py
labels/species_list/: species_list_orkland.txt
src/: birdnet2sqlite.py  preprocess_birdnet_result.py  utils.py
