[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Francesco Frassinelli", email = "francesco.frassinelli@nina.no"},
]
dependencies = [
    "sqlite-utils>=3.27",
]
requires-python = ">=3.9"
license = {text = "GPLv3"}

[tool.pdm]

[tool.black]

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility.html
profile = "black"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
