[tool.poetry]
name = "birdnet2sqlite"
version = "0.1.0"
description = ""
authors = ["Benjamin Cretois <benjamin.cretois@nina.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlite-utils = "3.26.1"
pandas = "2.0.0"
numpy = "1.26.4"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
